# yc-bench

./: .gitignore  README.md  changes.md  pyproject.toml  run.sh  run_all_models.sh  start.sh
docs/: index.html
results/: yc_bench_result_1_openrouter_google_gemini-2.5-flash-preview.json  yc_bench_result_1_openrouter_google_gemini-3-flash-preview.json  yc_bench_result_1_openrouter_google_gemini-flash-1.5.json  yc_bench_result_1_openrouter_liquid_lfm-2.5-1.2b-thinking:free.json  yc_bench_result_1_openrouter_minimax_minimax-m2.5.json  yc_bench_result_1_openrouter_moonshotai_kimi-k2.5.json  yc_bench_result_1_openrouter_nvidia_nemotron-3-nano-30b-a3b:free.json  yc_bench_result_1_openrouter_openai_gpt-4o-mini.json  yc_bench_result_1_openrouter_openai_gpt-5.2-pro.json  yc_bench_result_1_openrouter_x-ai_grok-4.1-fast.json  yc_bench_result_1_openrouter_z-ai_glm-5.json  yc_bench_result_fast_test_1_openai_gpt-4.1-mini.json  yc_bench_result_hard_1_anthropic_claude-sonnet-4-6.json  yc_bench_result_hard_1_gemini_gemini-3-flash-preview.json  yc_bench_result_hard_1_openai_gpt-5.2.json  yc_bench_result_hard_1_openai_gpt-5.4.json  yc_bench_result_hard_1_openrouter_anthropic_claude-haiku-4-5.json  yc_bench_result_hard_2_anthropic_claude-sonnet-4-6.json  yc_bench_result_hard_2_gemini_gemini-3-flash-preview.json  yc_bench_result_hard_2_openai_gpt-5.2.json  yc_bench_result_hard_3_anthropic_claude-sonnet-4-6.json  yc_bench_result_hard_3_gemini_gemini-3-flash-preview.json  yc_bench_result_medium_1_gemini_gemini-3-flash-preview.json  yc_bench_result_medium_1_openai_gpt-5.2.json  (+14 more)
(+90 files in other folders)
